--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -73,36 +73,36 @@ jobs:
           docker build -f ./Dockerfile -t ${{ secrets.DOCKER_HUB_USR }}/caddy:latest .
           docker push ${{ secrets.DOCKER_HUB_USR }}/caddy:latest
 
-      - name: Notify Failed
-        if: |
-          always() && 
-          (steps.build.outcome  == 'failed' || steps.build.outcome  == 'skipped') || 
-          (steps.build_docker.outcome  == 'failed' || steps.build_docker.outcome  == 'skipped')
-        run: |
-          curl \
-            -u ${{ secrets.NTFY_CRED }} \
-            -H "Title: Caddy Build" \
-            -H "Content-Type: text/plain" \
-            -H "Priority: 4" \
-            -H "Tag: no_entry" \
-            -d "Caddy Build failed!" \
-            -H "Actions: view, View Log, https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}" \
-            ${{ secrets.NTFY_URL }}
-      - name: Notify Success
-        if: always() && steps.build.outcome  == 'success' && steps.build_docker.outcome  == 'success'
-        run: |
-          curl \
-            -u ${{ secrets.NTFY_CRED }} \
-            -H "Title: New Caddy Release" \
-            -H "Content-Type: text/plain" \
-            -H "Priority: 1" \
-            -H "Tag: pushpin" \
-            -d "New Version: ${{ steps.caddy_version.outputs.tag_name }}
-          Docker Image Updated: ✔️" \
-            -H "Actions: view, See Release, ${{ steps.create_release.outputs.url }}; \
-                         view, See Image, https://hub.docker.com/r/${{ secrets.DOCKER_HUB_USR}}/caddy/tags" \
-            ${{ secrets.NTFY_URL }}
-      - name: Notify Docker Fail
+      # - name: Notify Failed
+      #   if: |
+      #     always() && 
+      #     (steps.build.outcome  == 'failed' || steps.build.outcome  == 'skipped') || 
+      #     (steps.build_docker.outcome  == 'failed' || steps.build_docker.outcome  == 'skipped')
+      #   run: |
+      #     curl \
+      #       -u ${{ secrets.NTFY_CRED }} \
+      #       -H "Title: Caddy Build" \
+      #       -H "Content-Type: text/plain" \
+      #       -H "Priority: 4" \
+      #       -H "Tag: no_entry" \
+      #       -d "Caddy Build failed!" \
+      #       -H "Actions: view, View Log, https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}" \
+      #       ${{ secrets.NTFY_URL }}
+      # - name: Notify Success
+      #   if: always() && steps.build.outcome  == 'success' && steps.build_docker.outcome  == 'success'
+      #   run: |
+      #     curl \
+      #       -u ${{ secrets.NTFY_CRED }} \
+      #       -H "Title: New Caddy Release" \
+      #       -H "Content-Type: text/plain" \
+      #       -H "Priority: 1" \
+      #       -H "Tag: pushpin" \
+      #       -d "New Version: ${{ steps.caddy_version.outputs.tag_name }}
+      #     Docker Image Updated: ✔️" \
+      #       -H "Actions: view, See Release, ${{ steps.create_release.outputs.url }}; \
+      #                    view, See Image, https://hub.docker.com/r/${{ secrets.DOCKER_HUB_USR}}/caddy/tags" \
+      #       ${{ secrets.NTFY_URL }}
+      # - name: Notify Docker Fail
         if: always() && steps.build.outcome  == 'success' && (steps.build_docker.outcome  == 'failed' || steps.build_docker.outcome  == 'skipped')
         run: |
           curl \
