--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Get Version
         id: caddy_version
         run: |
-          CADDY=$(./caddy version)
+          CADDY=$(./amd64/caddy version)
           vr="${CADDY}"
           echo "version=$( echo $vr | head -n1 | cut -d " " -f1 )" >> $GITHUB_OUTPUT
           echo "tag_name=$( echo $vr | head -n1 | cut -d " " -f1 )" >> $GITHUB_OUTPUT        
@@ -108,7 +108,7 @@ jobs:
           url: ${{ secrets.NTFY_URL }}
           topic: ${{ secrets.NTFY_TOPIC }}
           priority: 1
-          headers: '{"authorization": Basic ${{ secrets.NTFY_CRED }} }'
+          headers: '{"authorization": "Basic ${{ secrets.NTFY_CRED }}" }'
           tags: pushpin,caddy
           title: New Caddy release!
           details: 'New Version: ${{ steps.caddy_version.outputs.tag_name }}'
@@ -122,7 +122,7 @@ jobs:
           url: ${{ secrets.NTFY_URL }}
           topic: ${{ secrets.NTFY_TOPIC }}
           priority: 4
-          headers: '{"authorization": Basic ${{ secrets.NTFY_CRED }} }'
+          headers: '{"authorization": "Basic ${{ secrets.NTFY_CRED }}" }'
           tags: no_entry,caddy
           title: Caddy build failed!
           details: One or more of the build steps in the alexandzors/caddy workflow failed.
@@ -136,7 +136,7 @@ jobs:
           url: ${{ secrets.NTFY_URL }}
           topic: ${{ secrets.NTFY_TOPIC }}
           priority: 3
-          headers: '{"authorization": Basic ${{ secrets.NTFY_CRED }} }'
+          headers: '{"authorization": "Basic ${{ secrets.NTFY_CRED }}" }'
           tags: no_entry_sign,caddy
           title: Caddy build cancelled!
           details: The alexandzors/caddy build workflow was cancelled.
