--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -48,17 +48,7 @@ jobs:
           version=$(echo $vr | head -n1 | cut -d " " -f1 | sed 's/^v//')
           tag_name=$(echo $vr | head -n1 | cut -d " " -f1)
           echo "version=$version" >> $GITHUB_ENV
-          echo "tag_name=$tag_name" >> $GITHUB_ENV       
-
-      # Get the latest caddy release notes from version tag
-      - name: Get latest Caddy release notes
-        id: get_release_notes
-        uses: cardinalby/git-get-release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag: '${{ steps.caddy_version.outputs.tag_name }}'
-          repo: caddyserver/caddy
+          echo "tag_name=$tag_name" >> $GITHUB_ENV   
 
       # Create Binary release with release notes from upstream
       - name: Create Release
@@ -69,8 +59,7 @@ jobs:
           name: Caddy ${{ steps.caddy_version.outputs.tag_name }}
           body: |
             **Caddy ${{ steps.caddy_version.outputs.tag_name }} release notes:**
-            _[caddyserver/caddy](https://github.com/caddyserver/caddy/releases/tag/${{ steps.caddy_version.outputs.tag_name }})_
-            ${{ steps.get_release_notes.outputs.body }}
+            _Release notes: [caddyserver/caddy](https://github.com/caddyserver/caddy/releases/tag/${{ steps.caddy_version.outputs.tag_name }})_
           files: |
             amd64/caddy
             amd64/caddy.exe
