--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -46,20 +46,31 @@ jobs:
           vr="${CADDY}"
           # Extract version and remove the 'v' from the version string for the 'version' variable
           version=$(echo $vr | head -n1 | cut -d " " -f1 | sed 's/^v//')
-          tag_name=$(echo $vr | head -n1 | cut -d " " -f1)
           echo "version=$version" >> $GITHUB_ENV
-          echo "tag_name=$tag_name" >> $GITHUB_ENV   
+          tag_name=$(echo $vr | head -n1 | cut -d " " -f1)
+          echo "tag_name=$tag_name" >> $GITHUB_ENV
+
+      # Get the latest caddy release notes from version tag
+      - name: Get latest Caddy release notes
+        id: get_release_notes
+        uses: cardinalby/git-get-release-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag: "${{ steps.caddy_version.outputs.tag_name }}"
+          repo: caddyserver/caddy
 
       # Create Binary release with release notes from upstream
       - name: Create Release
         id: create_release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: "${{ steps.caddy_version.outputs.tag_name }}"
           name: Caddy ${{ steps.caddy_version.outputs.tag_name }}
           body: |
             **Caddy ${{ steps.caddy_version.outputs.tag_name }} release notes:**
-            _Release notes: [caddyserver/caddy](https://github.com/caddyserver/caddy/releases/tag/${{ steps.caddy_version.outputs.tag_name }})_
+            _[caddyserver/caddy](https://github.com/caddyserver/caddy/releases/tag/${{ steps.caddy_version.outputs.tag_name }})_
+            ${{ steps.get_release_notes.outputs.body }}
           files: |
             amd64/caddy
             amd64/caddy.exe
