re-arrange vars, added debug step for vars to see formatting

--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -45,9 +45,16 @@ jobs:
           CADDY=$(./amd64/caddy version)
           vr="${CADDY}"
           # Extract version and remove the 'v' from the version string for the 'version' variable
-          echo "VERSION=$(echo $vr | head -n1 | cut -d " " -f1 | sed 's/^v//')" >> $GITHUB_OUTPUT
-          echo "TAG=$( echo $vr | head -n1 | cut -d " " -f1 )" >> $GITHUB_OUTPUT
+          VERSION=$(echo $vr | head -n1 | cut -d " " -f1 | sed 's/^v//')
+          TAG=$( echo $vr | head -n1 | cut -d " " -f1 )
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "TAG=$TAG" >> $GITHUB_OUTPUT
 
+      - name: Var Debug
+        run: |
+          echo "TAG: ${{ env.TAG }}"
+          echo "VERSION: ${{ env.VERSION }}"
+          
       # Get the latest caddy release notes from version tag
       - name: Get latest Caddy release notes
         id: get_release_notes
