--- a/Dockerfile.x86
+++ b/Dockerfile.x86
@@ -1,7 +1,8 @@
 ARG VERSION=2
 FROM caddy:${VERSION}-alpine
 
-COPY ./caddy /usr/bin/caddy
+COPY ./amd64/caddy /usr/bin/caddy
 RUN chmod +x /usr/bin/caddy
 
 LABEL org.opencontainers.image.authors="github.com/alexandzors"
+LABEL org.opencontainers.image.architecture="amd64"
