--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,7 +1,8 @@
 ARG VERSION=2
 FROM arm64v8/caddy:${VERSION}-alpine
 
-COPY ./caddy_arm64 /usr/bin/caddy
+COPY ./arm64/caddy_arm64 /usr/bin/caddy
 RUN chmod +x /usr/bin/caddy
 
 LABEL org.opencontainers.image.authors="github.com/alexandzors"
+LABEL org.opencontainers.image.architecture="arm64"
