--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -94,9 +94,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          dockerfile: ./Dockerfile
+          file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USR }}/caddy:latest, ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}
+          tags: ${{ secrets.DOCKER_HUB_USR }}/caddy:latest-amd64, ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-amd64
           build-args: |
             "VERSION=${{ env.VERSION }}"
 
@@ -104,7 +104,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          dockerfile: ./Dockerfile.arm
+          file: ./Dockerfile.arm
           push: true
           tags: ${{ secrets.DOCKER_HUB_USR }}/caddy:latest-arm64, ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-arm64
           platforms: linux/arm64
@@ -113,12 +113,12 @@ jobs:
 
       - name: Create Manifest :latest
         run: |
-          docker manifest create ${{ secrets.DOCKER_HUB_USR }}/caddy:latest \
+          docker manifest create ${{ secrets.DOCKER_HUB_USR }}/caddy:latest-amd64 \
             --amend ${{ secrets.DOCKER_HUB_USR }}/caddy:latest-arm64
           docker manifest push ${{ secrets.DOCKER_HUB_USR }}/caddy:latest
 
       - name: Create manifest version
         run: |
-          docker manifest create ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }} \
+          docker manifest create ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-amd64 \
             --amend ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-arm64
           docker manifest push ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}
