--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -89,34 +89,16 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USR }}
           password: ${{ secrets.DOCKER_HUB_PW }}
 
-      # Build Docker Containers
+      # Build and push multi-arch Docker images
       - name: Build and Push Docker Images
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
-          no-cache: true
-          tags: ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-amd64, ${{ secrets.DOCKER_HUB_USR }}/caddy:latest-amd64
-
-      - name: Build and Push ARM Docker Images
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile.arm
-          platforms: linux/arm64
-          push: true
-          no-cache: true
-          tags: ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-arm64, ${{ secrets.DOCKER_HUB_USR }}/caddy:latest-arm64
-
-      # Create and push manifest for multi-arch image
-      - name: Create and Push Manifest (latest)
-        run: |
-          docker manifest create ${{ secrets.DOCKER_HUB_USR }}/caddy:latest --amend ${{ secrets.DOCKER_HUB_USR }}/caddy:latest-amd64 --amend ${{ secrets.DOCKER_HUB_USR }}/caddy:latest-arm64
-          docker manifest push ${{ secrets.DOCKER_HUB_USR }}/caddy:latest
-
-      - name: Create and Push Manifest (version)
-        run: |
-          docker manifest create ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }} --amend ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-amd64 --amend ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}-arm64
-          docker manifest push ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}
+          tags: |
+            ${{ secrets.DOCKER_HUB_USR }}/caddy:${{ env.VERSION }}
+            ${{ secrets.DOCKER_HUB_USR }}/caddy:latest
+          build-args: |
+            VERSION=${{ env.VERSION }}
